# Ivan-Messenger

./: .gitignore  README.md
.github/workflows/: release-client.yml
ClientPart/: CMakeLists.txt  main.cpp
ClientPart/.github/workflows/: release-client.yml
ClientPart/App/: AppState.cpp  AppState.h  DialogManager.cpp  DialogManager.h  Handler.cpp  Handler.h  StateBinder.cpp  StateBinder.h  appcontroller.cpp  appcontroller.h
ClientPart/Network/: MessageRouter.cpp  MessageRouter.h  tcp_client.cpp  tcp_client.h
ClientPart/UI/: loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  uicontroller.cpp  uicontroller.h
ClientPart/styles/: style.qss  style.qss.save
ClientPart/tests/: CMakeLists.txt  test_validator.cpp
ServerPart/: CMakeLists.txt  cmake_install.cmake  server.crt
ServerPart/include/: ClientSession.h  Config.h  DB_DialogManager.h  DB_MessageManager.h  DB_UserManager.h  Handler.h  MessageDispatcher.h  MessageDispatcher_.h  SessionManager.h  SignalHandler.h  TCPServer.h  TcpServer.h  UserManager.h
ServerPart/src/: ClientSession.cpp  Config.cpp  DB_DialogManager.cpp  DB_MessageManager.cpp  DB_UserManager.cpp  Handler.cpp  MessageDispatcher.cpp  MessageDispatcher_.cpp  SessionManager.cpp  SignalHandler.cpp  TCPServer.cpp  TcpServer.cpp  UserManager.cpp  main.cpp
common/: Dialog.h  Message.h  MetaDialog.h  PacketIO.cpp  PacketIO.h  Validator.cpp  Validator.h  protocol.h
